# student_id_ads2_project

./: CMakeLists.txt  DSA-Demo.c  Makefile  ReadME.md  demo.c
Bonus/: CMakeLists.txt  DSA-Demo.c  Makefile  dataset_analysis.c
Bonus/output/: DSA-Demo  dataset_analysis
docs/: problem_solving.md
include/: Dataset_Analysis.h  array.h  common.h  file_utils.h  linked_lists.h  string_utils.h
output/: azoz  demo  dsa_demo
src/: Dataset_Analysis.c  Dataset_Analysis_Header_Code.c  array  array.c  file_utils.c  linked_lists.c  string_utils.c
src/output/: array
